compiler/typ/tests/fixtures/diagnostics/0318_fun_polymorphic_record_field_mismatch_08.ml.infer.expected
File "0318_fun_polymorphic_record_field_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0318_fun_polymorphic_record_field_mismatch_08 is not a valid module name.

File "0318_fun_polymorphic_record_field_mismatch_08.ml", line 2, characters 43-53:
2 | let bad_theta : poly_theta = { run_theta = fun _ -> 7 }
                                               ^^^^^^^^^^
Error: This field value has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
